--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <img src="MEEM_thin.png" alt="logo"  class="center">
 
-<h1>Next Meetup</h1>
+<h1>Next event</h1>
 <p>Location: TBD<br>Time: TBD<br>Speakers: TBD</p>
 
 <h3>Organization</h3>
