--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Home
 <p>Location: TBD<br>Time: TBD<br>Speakers: TBD</p>
 
 <h3>Organization</h3>
-<p>Amaan Valiuddin - <a href="mailto:m.m.a.valiuddin@tue.nl">m.m.a.valiuddin@tue.nl</a></p>
+<p><a href="mailto:secretary@sasalaam.nl">secretary@sasalaam.nl</a></p>
 
 
 
