--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Home
 <img src="MEEM_thin.png" alt="logo"  class="center">
 
 <h1>Next event</h1>
-<p>Location: TBD<br>Time: TBD<br>Speakers: TBD</p>
+Expat summer BBQ
+<p>Location: Helmond<br>Date: Thursday the 8th of August 2024<br>Time: After salaat al `Asr</p>
 
 <h3>Organization</h3>
 <p><a href="mailto:secretary@sasalaam.nl">secretary@sasalaam.nl</a></p>
