--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <img src="MEEM_thin.png" alt="logo"  class="center">
 
 <h1>Next event</h1>
-Expat summer BBQ
+<h2>Expat summer BBQ</h2>
 <p>Location: Helmond<br>Date: Thursday the 8th of August 2024<br>Time: After salaat al `Asr</p>
 
 <h3>Organization</h3>
