--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
 <h1>Next event</h1>
 <h2>Expat summer BBQ</h2>
-<p>Location: Helmond<br>Date: Thursday the 8th of August 2024<br>Time: After salaat al `Asr</p>
+<p>Location: Helmond<br>Date: Thursday 8th of August 2024<br>Time: After salaat al `Asr</p>
 
 <h3>Organization</h3>
 <p><a href="mailto:secretary@sasalaam.nl">secretary@sasalaam.nl</a></p>
