--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@ title: Home
 <img src="MEEM_thin.png" alt="logo"  class="center">
 
 <h1>Next event</h1>
-<h2>Expat summer BBQ</h2>
+<h2>TaQwa x SA Salaam workshop: How TaQwa habits can stop procrastination</h2>
+<p>Location: TU/e campus, Auditorium 5<br>Date: Thursday 17th of October 2024<br>Time: 17:00-20:00</p>
+<p>Sign up <a href="tiny.cc/taqwaminds">here</a>.</p>
+<p>Contact: <a href="mailto:secretary@sasalaam.nl">secretary@sasalaam.nl</a></p>
+
+<h2>Past events</h2>
+<h3>Expat summer BBQ</h3>
 <p>Location: Helmond<br>Date: Thursday 8th of August 2024<br>Time: After salaat al `Asr</p>
 
-<h3>Organization</h3>
-<p><a href="mailto:secretary@sasalaam.nl">secretary@sasalaam.nl</a></p>
+
 
 
 
