--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 <h1>Next event</h1>
 <h2>TaQwa x SA Salaam workshop: How TaQwa habits can stop procrastination</h2>
 <p>Location: TU/e campus, Auditorium 5<br>Date: Thursday 17th of October 2024<br>Time: 17:00-20:00</p>
-<p>Sign up <a href="wwww.tiny.cc/taqwaminds">here</a>. <br>Contact: <a href="mailto:secretary@sasalaam.nl">secretary@sasalaam.nl</a></p>
+<p>Sign up <a href="https://www.tiny.cc/taqwaminds">here</a>. <br>Contact: <a href="mailto:secretary@sasalaam.nl">secretary@sasalaam.nl</a></p>
 
 <h2>Past events</h2>
 <h3>Expat summer BBQ</h3>
